Popup visibility fix

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
 }
 
 body {
+  padding: 0;
+  margin: 0;
   width: 200px;
   background-color: black;
   color: white;
